<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uwaterloo.cs349.a4.MainActivity">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/name"
        android:layout_toStartOf="@+id/name"
        android:gravity="end"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/name"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_title"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignLeft="@+id/name_title"
        android:layout_alignStart="@+id/name_title"
        android:layout_below="@+id/name"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickNext"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.4"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->

</android.support.constraint.ConstraintLayout>
